update to  home page main paragraph

--- a/startup_homepage.html
+++ b/startup_homepage.html
@@ -1,7 +1,7 @@
 <h1>"Techs United"</h1>
 <h2>Changing the fututre of AI</h2>
 <p>My company reviews the use of AI and tries to improve it by adding more uses to AI. 
-    This is done Via using different AI models such as ChatGPT and Google AI.
+   This is acheived by using different AI models such as ChatGPT and Google AI.
     
 </p>
 
